--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.6.4.Final</version>
 		 </dependency>
+
+		 <!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
 		 
 	</dependencies>
 
