cambiado CI.yaml para ejecutar pwd

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,4 +10,4 @@ jobs:
     name: Unit tests
     runs-on: ubuntu-latest
     steps:
-    - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: pwd
