--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,4 +1,4 @@
-name: ci
+name: ci_junit_maven
 
 on:
   push:
@@ -11,3 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Setup Java JDK
+      uses: actions/setup-java@v3.4.0
+      with:
+        # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
+        java-version: 1.13
+    - run: mvn test
+
+
