--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -3,7 +3,7 @@ name: Continous Deployment
 on:
   push:
     branches:
-      - "master"
+      - "cd"
 
 jobs:
   Continous_deployment:
@@ -19,16 +19,10 @@ jobs:
         java-version: 1.13
     - run: mvn package -DskipTests
           #Builds a Docker and deploys on Heroku
-    - name: Heroku Docker Container Deploy
-      # You may pin to the exact commit or the version.
-      # uses: lucassarcanjo/heroku-deploy@1db4c62f6032efe526c12734f18d36669218e5af
-      uses: lucassarcanjo/heroku-deploy@2.1.17
+    - name: Deploy on Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       with:
-        # Email Linked to your Heroku Account
-        email: ${{secrets.HEROKU_EMAIL}}
-        # Heroku Dyno Formation
-        api_key: ${{secrets.HEROKU_API_KEY}}
-        # Your Heroku App Name
-        app_name: ${{secrets.HEROKU_APP_NAME}}
-        # Dokerfile path
-        dockerfile_path: .
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
+        usedocker: true
