--- a/.github/workflows/CDAws.yaml
+++ b/.github/workflows/CDAws.yaml
@@ -63,6 +63,7 @@ jobs:
         with:
           context: .
           push: true
+          file: DockerFileAws
           tags: ${{secrets.dockerhub_username}}/${{secrets.proyect_name}}:${{ env.RELEASE_VERSION }}
 
 
