--- a/.github/workflows/CDAws.yaml
+++ b/.github/workflows/CDAws.yaml
@@ -74,7 +74,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ubuntu
           key: ${{ secrets.SSH }}
-          script: sudo docker stop thisDocker |
-                  wait |
-                  sudo docker rm thisDocker |
+          script: |
+                  sudo docker stop thisDocker
+                  sudo docker rm thisDocker
                   sudo docker run -d --name=thisDocker -p 8080:8080 ${{secrets.dockerhub_username}}/${{secrets.proyect_name}}:${{ env.RELEASE_VERSION }}
