--- a/.github/workflows/CDAws.yaml
+++ b/.github/workflows/CDAws.yaml
@@ -78,4 +78,4 @@ jobs:
                   sudo docker stop ${{secrets.proyect_name}}
                   sudo docker rm ${{secrets.proyect_name}}
                   sudo docker rmi ${{secrets.dockerhub_username}}/${{secrets.proyect_name}}:${{ env.RELEASE_VERSION }}
-                  sudo docker run -d --name=thisDocker -p 8080:8080 ${{secrets.dockerhub_username}}/${{secrets.proyect_name}}:${{ env.RELEASE_VERSION }}
+                  sudo docker run -d --name=${{secrets.proyect_name}} -p 8080:8080 ${{secrets.dockerhub_username}}/${{secrets.proyect_name}}:${{ env.RELEASE_VERSION }}
