--- a/.github/workflows/CDAws.yaml
+++ b/.github/workflows/CDAws.yaml
@@ -1,4 +1,4 @@
-################### REQUIERED SECRETS################################
+################### REQUIRED SECRETS################################
 #
 #       dockerhub username: ${{secrets.dockerhub_username}}
 #       dockerhub password: ${{secrets.dockerhub_password}}
@@ -8,12 +8,12 @@
 
 ################### DEFAULT VALUES ##################################
 #
-#       target host username: ubuntu 
-#       java-version: 1.13
-#       target docker ports: -p 8080:8080
-#       "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+#       (line 75) target host username: ubuntu 
+#       (line 44) java-version: 1.13
+#       (line 81) target docker ports: -p 8080:8080
+#       (line 38) "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-
+###################### ACTION ########################################
 name: Continous Deployment Docker
 
 on:
@@ -25,7 +25,7 @@ on:
 
 jobs:
   Continous_deployment:
-    name: Continous Deployment SSH
+    name: Continous Deployment Docker
     runs-on: ubuntu-latest
     steps:
 
@@ -47,7 +47,7 @@ jobs:
       - name: Maven Package without test
         run: mvn -B clean package -DskipTests
 
-    #### DOCKER BUILD AND PUSH ######################################################
+    #### DOCKER BUILD AND PUSH TO DOCKERHUB #########################################
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -67,8 +67,8 @@ jobs:
           tags: ${{secrets.dockerhub_username}}/${{secrets.proyect_name}}:${{ env.RELEASE_VERSION }}
 
 
-      #######################SSH  DOCKER DEPLOY##########################
-      - name: executing remote ssh commands using password
+      ####################### SSH  DOCKER DEPLOY ##############################################
+      - name: executing remote ssh commands
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
