--- a/.github/workflows/CDAws.yaml
+++ b/.github/workflows/CDAws.yaml
@@ -48,8 +48,8 @@ jobs:
         run: mvn -B clean package -DskipTests
 
     #### DOCKER BUILD AND PUSH TO DOCKERHUB #########################################
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
